--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "cypress": "^13.4.0",
     "next": "^14.0.1",
     "react": "^18.2.0",
